tests/paczka1/fuzzy1/69408454.err
Error in line 3: L4XmUGk9ySf S450 73,6
Error in line 5: L4XmUGk9ySf S664 21,9
Error in line 9: a4YcezOf S161 31,8
Error in line 13: XxqsS3pIRt6 S167 28,2
Error in line 14: XxqsS3pIRt6 S664 10,1
Error in line 7: L4XmUGk9ySf S167 94,0
Error in line 22: S664 S450 2,1
Error in line 28: S664 A876 80,4
Error in line 31: XxqsS3pIRt6 A876 97,9
